better-routes/tests/trybuild/non-self-arg.stderr
error: First argument must be self
  --> tests/trybuild/non-self-arg.rs:36:11
   |
36 |     async fn foo(&self) {}
   |           ^^

error[E0277]: the trait bound `Foo: MethodHandler<State>` is not satisfied
  --> tests/trybuild/non-self-arg.rs:29:22
   |
29 |     "/foo" => struct Foo; => FooRejection,
   |                      ^^^ the trait `MethodHandler<State>` is not implemented for `Foo`
   |
   = help: the trait `MethodHandler<State>` is implemented for `Bar`
note: required by a bound in `get_all_routes`
  --> tests/trybuild/non-self-arg.rs:26:1
   |
26 | / routes! {
27 | |     State => State,
28 | |     Rejection => GlobalRejection,
29 | |     "/foo" => struct Foo; => FooRejection,
30 | |     "/bar" => struct Bar;,
31 | | }
   | |_^ required by this bound in `get_all_routes`
   = note: this error originates in the macro `routes` (in Nightly builds, run with -Z macro-backtrace for more info)
